--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-bombe.dSYM/Contents
-enigma.dSYM/Contents
+*.dSYM
 .DS_Store
+enigma.dSYM/Contents
+bombe.dSYM/Contents
+bruteforce.dSYM/Contents
+.vscode
